--- a/app/src/main/res/layout/activity_detailed_product.xml
+++ b/app/src/main/res/layout/activity_detailed_product.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.DetailedProduct">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/nameProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        style="@style/inputText"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/priceProduct"
+        style="@style/inputText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nameProduct"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:text="TextView" />
+
+    <Button
+        android:id="@+id/buyProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/priceProduct"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        style="@style/inputText"
+        android:textColor="@color/white"
+        android:text="В корзину" />
+
+</RelativeLayout>
