--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,11 +12,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
         android:layout_marginTop="200dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/username" />
+        android:hint="@string/username" />
 
     <EditText
         android:id="@+id/registerUserPassword"
@@ -24,10 +23,9 @@
         android:layout_below="@+id/registerUserName"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/password" />
+        android:hint="@string/password"/>
 
     <EditText
         android:id="@+id/registerRepeatUserPassword"
@@ -38,7 +36,7 @@
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/repeatPassword" />
+        android:hint="@string/repeatPassword" />
 
     <Button
         android:id="@+id/registerUser"
@@ -46,7 +44,6 @@
         android:layout_below="@+id/registerRepeatUserPassword"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerInParent="true"
         android:textColor="@color/white"
         style="@style/inputText"
         android:text="@string/register" />
@@ -60,4 +57,17 @@
         android:layout_alignParentEnd="true"
         android:textColor="@color/red"
         style="@style/inputText" />
+
+    <TextView
+        android:id="@+id/registerLogIn"
+        style="@style/inputText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/registerTextError"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="logIn"
+        android:text="@string/LogIn"
+        android:textAlignment="center"
+        android:textColor="@color/teal_700" />
 </RelativeLayout>
