--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -3,36 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:onClick="getDetailedProduct"
+    android:id="@+id/product">
 
     <ImageView
-        android:id="@+id/imageProduct"
+        android:id="@+id/listProductsImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_launcher_background" />
 
     <TextView
-        android:id="@+id/nameProduct"
+        android:id="@+id/listProductsName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageProduct"
+        android:layout_below="@+id/listProductsImage"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
-        android:text="TextView" />
+        android:layout_marginTop="10dp" />
 
-    <Button
-        android:id="@+id/buyProduct"
+    <TextView
+        android:id="@+id/listProductsPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nameProduct"
+        android:layout_below="@+id/listProductsName"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:text="Button" />
+        android:layout_marginTop="5dp" />
 </RelativeLayout>
