--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -35,9 +35,13 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cartListProducts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cartListProducts"/>
+        android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="400dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
