--- a/app/src/main/res/layout/activity_detailed_product.xml
+++ b/app/src/main/res/layout/activity_detailed_product.xml
@@ -6,14 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".ui.DetailedProduct">
 
+    <ImageView
+        android:id="@+id/imageProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="144dp"
+        android:layout_marginEnd="158dp"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
     <TextView
         android:id="@+id/nameProduct"
+        style="@style/inputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        style="@style/inputText"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="121dp"
+        android:layout_marginEnd="75dp"
         android:text="TextView" />
 
     <TextView
@@ -24,17 +37,93 @@
         android:layout_below="@+id/nameProduct"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="75dp"
         android:text="TextView" />
 
     <Button
         android:id="@+id/buyProduct"
+        style="@style/inputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/priceProduct"
+        android:layout_below="@+id/countProduct"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        style="@style/inputText"
-        android:textColor="@color/white"
-        android:text="В корзину" />
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="76dp"
+        android:text="В корзину"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buyProduct"
+        android:layout_marginTop="38dp"
+        android:text="Отзывы"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:id="@+id/listReviews"
+        android:layout_below="@+id/textView"/>
+
+    <EditText
+        android:id="@+id/writeReview"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/listReviews"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:hint="Введите текст"/>
+
+    <Button
+        android:id="@+id/pushReviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Оставить отзыв"
+        android:layout_below="@+id/writeReview"
+        android:onClick="pushReview"/>
+
+    <TextView
+        android:id="@+id/countProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/priceProduct"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toStartOf="@+id/countPlus"
+        android:layout_toEndOf="@+id/countMinus"
+        android:text="1" />
+
+    <ImageButton
+        android:id="@+id/countPlus"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/priceProduct"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="26dp"
+        app:srcCompat="@android:drawable/ic_media_ff"
+        android:onClick="changeCountProduct"/>
+
+    <ImageButton
+        android:id="@+id/countMinus"
+        android:layout_width="77dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/priceProduct"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="4dp"
+        app:srcCompat="@android:drawable/ic_media_rew"
+        android:onClick="changeCountProduct"/>
 
 </RelativeLayout>
